<resources>
    <string name="app_name">Favorite Places</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_view_header">Favorite Places</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="error_in_login">Error in Login</string>
    <string name="error_in_register">Error in Register</string>
    <string name="please_fill_first_name">Please fill first name</string>
    <string name="please_fill_last_name">Please fill last name</string>
    <string name="please_fill_email">Please fill email</string>
    <string name="please_fill_password">Please fill password</string>
    <string name="invalid_email_message">Please enter valid email</string>
    <string name="invalid_password_message">Please enter valid password</string>
    <string name="node_users">users</string>
    <string name="don_t_have_an_account">Don‘t have an account?</string>
    <string name="add_place">Add Place</string>
    <string name="take_photo">Take photo</string>
    <string name="paste_link">Paste Link</string>
    <string name="delete_place">Delete Place</string>
    <string name="edit_place">Edit Place</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_log_out">Are you sure you want to log out?\nAll your data will be deleted</string>
    <string name="cancel">Cancel</string>
    <string name="select_option">Select Option</string>
    <string name="edit"><u>Edit</u></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_link_was_sent_message">Please check your email to confirm registration!</string>
    <string name="could_not_sent_email">Couldn‘t send email!</string>
    <string name="failed_to_authenticate">Failed to Authenticate!</string>
    <string name="email_is_not_verified">"Email is not Verified\nCheck your Inbox"</string>
    <string name="please_select_location">"Please select location!"</string>
    <string name="please_pick_an_image">"Please pick an image!"</string>
</resources>