<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:background="@color/white"
tools:context=".ui.auth.LoginActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_constrain_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login_view_header"
            android:textColor="@color/black_russian"
            android:textSize="@dimen/header_first_text_size"
            app:layout_constraintBottom_toTopOf="@+id/emailEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="@dimen/login_button_margins"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="@dimen/login_button_margins"
            android:background="@drawable/rounded_background_white_1dp_with_grey_borders"
            android:ems="10"
            android:hint="@string/email"
            android:maxLength="40"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/edit_text_start_padding"
            android:paddingEnd="5dp"
            android:textColor="@color/black_russian"
            android:textColorHint="@color/heather"
            android:textSize="@dimen/edit_txt_text_size"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="@dimen/login_button_margins"
            android:layout_marginTop="@dimen/margin_between_edit_texts"
            android:layout_marginEnd="@dimen/login_button_margins"
            android:background="@drawable/rounded_background_white_1dp_with_grey_borders"
            android:hint="@string/password"
            android:maxLength="20"
            android:inputType="textPassword"
            android:paddingStart="@dimen/edit_text_start_padding"
            android:paddingEnd="60dp"
            android:textColor="@color/black_russian"
            android:textColorHint="@color/heather"
            android:textSize="@dimen/edit_txt_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="@dimen/login_button_margins"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/login_button_margins"
            android:background="@drawable/rounded_background_white_3dp_with_black_borders"
            android:onClick="onLoginButtonClick"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black_russian"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />


        <TextView
            android:id="@+id/textErrorOnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/error_in_login"
            android:layout_marginTop="20dp"
            android:textColor="@color/yellow"
            android:textSize="@dimen/error_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="@dimen/login_button_margins"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/login_button_margins"
            android:layout_marginBottom="30dp"
            app:layout_constraintVertical_bias="0.0"
            android:background="@drawable/rounded_background_white_3dp_with_black_borders"
            android:onClick="onRegisterButtonClick"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/black_russian"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textErrorOnLogin" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</layout>