<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".ui.main.AddPlaceFragment">

<data>
    <variable name="fragment"
        type="com.urani.favoriteplaces.ui.main.AddPlaceFragment"/>
</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/white">


        <RelativeLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/todo"
                android:onClick="@{fragment::onBackButtonClick}"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_back_arrow" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/add_place"
                android:textColor="@color/nero"
                android:textSize="16sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/edit_place"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="gone"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/todo"
                android:onClick="@{fragment::onEditPlaceButtonClick}"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_tick" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray75" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/place_image"
            android:visibility="gone"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="14dp"
            android:scaleType="fitXY"
            android:src="@color/black_russian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar"/>

        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Take photo from camera or paste link from internet"
            android:textColor="@color/black_russian"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_image"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/text_from_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_background_white_3dp_with_black_borders"
            android:gravity="center"
            android:onClick="@{fragment::onTakePhotoClicked}"
            android:padding="10dp"
            android:text="@string/take_photo"
            android:textColor="@color/black_russian"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/button_paste_link"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_1" />

        <TextView
            android:id="@+id/button_paste_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/rounded_background_white_3dp_with_black_borders"
            android:gravity="center"
            android:onClick="@{fragment::onPasteLinkClicked}"
            android:padding="10dp"
            android:text="@string/paste_link"
            android:textColor="@color/black_russian"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_from_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_from_camera"
            app:layout_constraintTop_toTopOf="@+id/text_from_camera"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/link_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:maxLines="3"
            android:ellipsize="end"
            android:textColor="@color/charcoal"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_paste_link" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/link_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:visibility="gone"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="@dimen/login_button_margins"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/login_button_margins"
            android:background="@drawable/rounded_background_white_3dp_with_red_borders"
            android:onClick="@{fragment::onDeleteButtonClick}"
            android:text="@string/delete_place"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map" />


        <ProgressBar
            android:id="@+id/mapProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminateTint="@color/purple_700"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintStart_toStartOf="@+id/map"
            app:layout_constraintTop_toTopOf="@+id/map" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>